# algoverse-2026

./: LICENSE  README.md  pyproject.toml  requirements.txt
models/: client.py  generation.py  testing.py
qwen3/: __init__.py  client.py  effort.py
