[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algoverse-2026"
version = "0.1.0"
description = "Test-time compute experiments with Qwen3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.2",
]

[tool.setuptools.packages.find]
include = ["qwen3*"]
